<?xml version="1.0" encoding="utf-8"?>
<zame.game.views.MenuView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/menu_back"
    android:id="@+id/RootZameView"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingBottom="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="15dp">

    <LinearLayout
        android:id="@+id/ButtonsWrap"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="top|right"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/BtnNewGame"
            android:text="@string/btn_new_game"
            style="@style/MenuButton" />

        <Button
            android:id="@+id/BtnLoad"
            android:text="@string/btn_load"
            style="@style/MenuButton" />

        <Button
            android:id="@+id/BtnSave"
            android:text="@string/btn_save"
            style="@style/MenuButton" />

        <Button
            android:id="@+id/BtnContinue"
            android:text="@string/btn_continue"
            style="@style/MenuButton" />

    </LinearLayout>

    <TextView
        android:id="@+id/TxtHelp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/menu_help"
        style="@style/MenuHelpText" />

    <zame.promo.PromoView
        android:layout_above="@+id/TxtHelp"
        android:layout_alignParentLeft="true"
        android:layout_height="120dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="15dp"
        android:layout_toLeftOf="@+id/ButtonsWrap"
        android:layout_width="0dp" />

</zame.game.views.MenuView>
